# Database_Project

./: .gitignore  manage.py  pyproject.toml
Database_Project/: settings.py  urls.py  wsgi.py
accounts/: urls.py  views.py
main/: admin.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_auto_20200609_2306.py  0003_song_language_type.py  0004_auto_20200609_2357.py
templates/: base.html  card.html  home.html  song_list.html
templates/auth/: login.html  register.html
