[tool.poetry]
name = "datebase_project"
version = "0.1.0"
description = ""
authors = ["Yu-chuan <newdavidlin@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.3"
django = "2.2.12"
pillow = "^7.1.2"
mysqlclient = "^1.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
